# tjutils-py

./: .gitignore  00-utils.html  01-nbdev.html  02-terraform.html  CHANGELOG.md  README.md  TODO.md  index.html  pyproject.toml  robots.txt  search.json  settings.ini  setup.cfg  sitemap.xml
.github/workflows/: doc_deploy.yml  pkg_testing.yml
notebooks/: 00-utils.ipynb  01-nbdev.ipynb  02-terraform.ipynb  README.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
site_libs/bootstrap/: bootstrap.min.css
site_libs/quarto-html/: quarto-syntax-highlighting.css
templates/nbdev/: github_action_docs_deploy.yml  github_action_pkg_testing.yml  gitignore
tjutils/: _modidx.py  nbdev.py  terraform.py  utils.py
tjutils/templates/nbdev/: _quarto.yml  github_action_doc_deploy.yml  github_action_pkg_testing.yml
tjutils/templates/nbdev/github_actions/: doc_deploy.yml  pkg_testing.yml
tjutils/templates/nbdev/theme/: analytics.htm
