[tool.poetry]
name = "tjutils"
version = "0.10.1"
description = "Python Utilities for TJ P"
authors = ["TJ P <mail@tjpalanca.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities"
]
keywords = [
    "tjpalanca", 
    "nbdev",
    "utilities"
]
homepage = "https://tjpalanca.com/tjutils-py"
documentation = "https://tjpalanca.com/tjutils-py"
repository = "https://github.com/tjpalanca/tjutils-py.git"

[tool.nbdev]
custom_sidebar = "True"
branch = "master"
recursive = "True"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.27"
nbdev = "^2.3.7"
fastcore = "^1.5.27"
mypy = "^0.971"
black = {extras = ["jupyter"], version = "^22.10.0"}
flake8 = "^5.0.4"
bandit = "^1.7.4"
ipykernel = "^6.15.3"
tomlkit = "^0.11.5"
tomli = "^2.0.1"

[tool.poetry.scripts]
tjdev_generate = "tjutils.nbdev:generate"
tjdev_export = "tjutils.nbdev:export"
tjdev_version = "tjutils.nbdev:version"
tjdev_nbdev_gha = "tjutils.nbdev:github_actions"
tjdev_release = "tjutils.nbdev:release"
tjdev_nbdev_gitignore = "tjutils.nbdev:gitignore"
tjdev_nbdev_theme = "tjutils.nbdev:theme"
tjdev_terraform_gha = "tjutils.terraform:github_actions"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
