[tool.poetry]
name = "tjutils"
version = "0.11.0"
description = "Python Utilities for TJ P"
authors = ["TJ P <mail@tjpalanca.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities"
]
keywords = [
    "tjpalanca", 
    "nbdev",
    "utilities"
]
homepage = "https://github.tjpalanca.com/tjutils-py"
documentation = "https://github.tjpalanca.com/tjutils-py"
repository = "https://github.com/tjpalanca/tjutils-py.git"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.12"

[tool.nbdev]
custom_sidebar = "True"
branch = "master"
recursive = "True"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.27"
nbdev = "^2.3.7"
fastcore = "^1.5.27"
mypy = "^0.971"
black = {extras = ["jupyter"], version = "^22.10.0"}
flake8 = "^5.0.4"
ipykernel = "^6.15.3"
tomlkit = "^0.11.5"
tomli = "^2.0.1"

[tool.poetry.scripts]
tjdev_nbdev_export = "tjutils.nbdev:export"
tjdev_nbdev_version = "tjutils.nbdev:version"
tjdev_nbdev_gha = "tjutils.nbdev:github_actions"
tjdev_nbdev_release = "tjutils.nbdev:release"
tjdev_nbdev_gitignore = "tjutils.nbdev:gitignore"
tjdev_nbdev_theme = "tjutils.nbdev:theme"
tjdev_nbdev_config = "tjutils.nbdev:config"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
